--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
 .App-logo {
@@ -16,8 +20,8 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -37,12 +41,14 @@
   }
 }
 
+
+
 .checked-item {
   text-decoration: line-through;
 }
 
 
 
-.checked-item {
-  text-decoration: line-through;
+.not-checked-item {
+  text-decoration: none;
 }
